k8s-deployment-orig.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: nodered
  namespace: nodered
spec:
  ports:
  - name: nodered
    port: 1880
    protocol: TCP
    #targetPort: 1880
  selector:
    app: nodered
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodered
  name: nodered
  namespace: nodered
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: nodered
  template:
    metadata:
      labels:
        app: nodered
      namespace: nodered
    spec:
      containers:
      - env:
        - name: TZ
          value: ${TZ}
        image: nodered/node-red:2.1.3
        imagePullPolicy: IfNotPresent
        name: node-red
        ports:
        - containerPort: 1880
          name: nodered
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: data
      terminationGracePeriodSeconds: 0
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: nodered
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    kubernetes.io/ingress.class: nginx
  name: nodered
  namespace: nodered
spec:
  rules:
  - host: nodered.mais.casa
    http:
      paths:
      - backend:
          service:
            name: nodered
            port: 
              number: 1880
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nodered.mais.casa
    secretName: nodered-tls
